tests/testFiles/semanticErrors/elseifwithnonbooleanconditional.meme
I don't always (true) but when I do {
} but sometimes I (null) {
}
